# pyweb_module_9

pr_scrapper/: main.py  pyproject.toml
pr_scrapper/entities/: Scrapper.py
pr_scrapper/seeds/: connection.py  create_from_file.py  models.py
